--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -27,4 +27,12 @@ spec:
       remoteRef:
         key: /authelia/
         property: session_secret
+    - secretKey: AUTHELIA_NOTIFIER_SMTP_PASSWORD
+      remoteRef:
+        key: /authelia/
+        property: smtp_password
+    - secretKey: AUTHELIA_NOTIFIER_SMTP_USERNAME
+      remoteRef:
+        key: /authelia/
+        property: username
 
