--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -11,19 +11,19 @@ spec:
     name: authelia-secrets
     creationPolicy: Owner
   data:
-    - secretKey: AUTHELIA_JWT_SECRET
+    - secretKey: JWT_TOKEN
       remoteRef:
         key: /authelia/
         property: jwt_secret
-    - secretKey: AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD
+    - secretKey: LDAP_PASSWORD
       remoteRef:
         key: /ldap/
         property: LLDAP_LDAP_USER_PASS
-    - secretKey: AUTHELIA_STORAGE_ENCRYPTION_KEY
+    - secretKey: STORAGE_ENCRYPTION_KEY
       remoteRef:
         key: /authelia/
         property: encryption_key
-    - secretKey: AUTHELIA_SESSION_SECRET
+    - secretKey: SESSION_ENCRYPTION_KEY
       remoteRef:
         key: /authelia/
         property: session_secret
