--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -17,6 +17,8 @@ authelia:
     tls:
       enabled: true
       secret: authelia-tls-certificate
+      hosts:
+        - *host
   env:
   - name: TZ
     value: America/Los_Angeles
