--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -5,20 +5,15 @@ authelia:
     ingressClassName: nginx
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/tls-acme: "true"
       hajimari.io/enable: "true"
       hajimari.io/icon: lock
       hajimari.io/appName: Authelia
       hajimari.io/info: Authentication and authorization, MFA and SSO
-    hosts:
-      - host: &host auth.toolstowelsandfroods.com
-        paths:
-          - path: /
-            pathType: Prefix
+    subdomain: auth
     tls:
       enabled: true
       secret: authelia-tls-certificate
-      hosts:
-        - *host
   env:
   - name: TZ
     value: America/Los_Angeles
