add load balancer

--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -1,5 +1,7 @@
 authelia:
   domain: toolstowelsandfroods.com
+  service:
+    type: LoadBalancer
   ingress:
     enabled: true
     ingressClassName: nginx
