--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -2,6 +2,7 @@ authelia:
   domain: toolstowelsandfroods.com
   service:
     type: LoadBalancer
+    externalIPs: ["192.168.50.230"]  
   ingress:
     enabled: true
     ingressClassName: nginx
