--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -1,22 +1,65 @@
-authelia:
-  domain: toolstowelsandfroods.com
-  service:
-    type: LoadBalancer
-    externalIPs: ["192.168.50.230"]  
-  ingress:
-    enabled: true
-    ingressClassName: nginx
+app-template:
+  controller:
     annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/tls-acme: "true"
-      hajimari.io/enable: "true"
-      hajimari.io/icon: lock
-      hajimari.io/appName: Authelia
-      hajimari.io/info: Authentication and authorization, MFA and SSO
-    subdomain: auth
-    tls:
+      reloader.stakater.com/auto: "true"
+    type: statefulset
+  image:
+    repository: ghcr.io/authelia/authelia
+  domain: toolstowelsandfroods.com+
+  enableServiceLinks: false
+  service:
+    main:
+      ports:
+        http:
+          port: &port 80
+        metrics:
+          enabled: true
+          port: 8080
+  probes:
+    liveness: &probes
       enabled: true
-      secret: authelia-tls-certificate
+      custom: true
+      spec:
+        httpGet:
+          path: /api/health
+          port: *port
+        initialDelaySeconds: 0
+        periodSeconds: 10
+        timeoutSeconds: 1
+        failureThreshold: 3
+    readiness: *probes
+    startup:
+      enabled: false
+  serviceMonitor:
+    main:
+      enabled: true
+      endpoints:
+        - port: metrics
+          scheme: http
+          path: /metrics
+          interval: 1m
+          scrapeTimeout: 10s 
+  ingress:
+    main:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        kubernetes.io/tls-acme: "true"
+        hajimari.io/enable: "true"
+        hajimari.io/icon: lock
+        hajimari.io/appName: Authelia
+        hajimari.io/info: Authentication and authorization, MFA and SSO
+      subdomain: auth
+      hosts:
+        - host: &host auth.toolstowelsandfroods.com
+          paths:
+            - path: /
+
+      tls:
+        - secretName: authelia-tls-certificate
+          hosts:
+            - *host
   env:
   - name: TZ
     value: America/Los_Angeles
