--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -5,6 +5,7 @@ app-template:
     type: statefulset
   image:
     repository: ghcr.io/authelia/authelia
+    tag: 4.37.5
   domain: toolstowelsandfroods.com+
   enableServiceLinks: false
   service:
