--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -1,67 +1,23 @@
-app-template:
-  controller:
-    annotations:
-      reloader.stakater.com/auto: "true"
-    type: statefulset
-  image:
-    repository: ghcr.io/authelia/authelia
-    tag: 4.37.5
-  args: ["--config", "/config/configuration.yml", "expand-env"]
-  domain: toolstowelsandfroods.com+
-  enableServiceLinks: false
+authelia:
+  domain: toolstowelsandfroods.com
   service:
-    main:
-      ports:
-        http:
-          port: &port 80
-        metrics:
-          enabled: true
-          port: 8080
-  probes:
-    liveness: &probes
-      enabled: true
-      custom: true
-      spec:
-        httpGet:
-          path: /api/health
-          port: *port
-        initialDelaySeconds: 0
-        periodSeconds: 10
-        timeoutSeconds: 1
-        failureThreshold: 3
-    readiness: *probes
-    startup:
-      enabled: false
-  serviceMonitor:
-    main:
-      enabled: true
-      endpoints:
-        - port: metrics
-          scheme: http
-          path: /metrics
-          interval: 1m
-          scrapeTimeout: 10s 
+    type: LoadBalancer
+    externalTrafficPolicy: Local
+    externalIPs: ["192.168.50.225","192.168.50.226","192.168.50.227","192.168.50.228"]
   ingress:
-    main:
+    enabled: true
+    ingressClassName: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/tls-acme: "true"
+      hajimari.io/enable: "true"
+      hajimari.io/icon: lock
+      hajimari.io/appName: Authelia
+      hajimari.io/info: Authentication and authorization, MFA and SSO
+    subdomain: auth
+    tls:
       enabled: true
-      ingressClassName: nginx
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-prod
-        kubernetes.io/tls-acme: "true"
-        hajimari.io/enable: "true"
-        hajimari.io/icon: lock
-        hajimari.io/appName: Authelia
-        hajimari.io/info: Authentication and authorization, MFA and SSO
-      subdomain: auth
-      hosts:
-        - host: &host auth.toolstowelsandfroods.com
-          paths:
-            - path: /
-
-      tls:
-        - secretName: authelia-tls-certificate
-          hosts:
-            - *host
+      secret: authelia-tls-certificate
   env:
   - name: TZ
     value: America/Los_Angeles
