--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -3,7 +3,11 @@ authelia:
   service:
     type: LoadBalancer
     externalTrafficPolicy: Local
-    externalIPs: ["192.168.50.225","192.168.50.226","192.168.50.227","192.168.50.228"]
+    ports:
+      - port: 80
+        name: http
+      - port: 443
+        name: https
   ingress:
     enabled: true
     ingressClassName: nginx
