--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -8,8 +8,9 @@ app-template:
     repository: ghcr.io/authelia/authelia
     # TODO Switch to Authelia release tag on next release
     tag: master@sha256:9ec88ac73269855f3a0e0b80ed6ee4980decd81fb12901ff39cd9d8d2cf9b6fc
+  args: ["--config", "/etc/authelia/config.yaml"]
   service:
-    main:
+.    main:
       ports:
         http:
           port: &port 80
@@ -51,49 +52,13 @@ app-template:
       memory: 120Mi
   rbac:
     enabled: true
-  configMap:
-    log:
-      level: trace
-    default_2fa_method: totp
-    storage:
-      local:
-        path: /db/db.sqlite3
-    authentication_backend:
-      password_reset:
-        disable: true
-      ldap:
-        implementation: custom
-        url: ldap://lldap.lldap.svc.cluster.local:3890
-        base_dn: dc=toolstowelsandfroods,dc=com
-        username_attribute: uid
-        additional_users_dn: ou=people
-        users_filter: (&({username_attribute}={input})(objectClass=person))
-        additional_groups_dn: ou=groups
-        groups_filter: "(member={dn})"
-        group_name_attribute: cn
-        mail_attribute: mail
-        display_name_attribute: displayName
-        user: uid=admin,ou=people,dc=toolstowelsandfroods,dc=com
-    access_control:
-      default_policy: one_factor
-      networks:
-        - name: internal
-          networks: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
-    session:
-      redis:
-        host: redis.redis.svc.cluster.local
-        port: 6379
-    storage:
-      local:
-        enabled: true
-      postgres:
-        enabled: false
-    notifier:
-      disable_startup_check: true
-      filesystem:
-        enabled: true
-        filename: /config/notification.txt
-      smtp:
-        enabled: false
   secret:
     existingSecret: authelia-secrets
+  persistence:
+    config:
+      enabled: true
+      type: configMap
+      name: authelia-config
+      subPath: config.yaml
+      mountPath: /etc/authelia/config.yaml
+      readOnly: false
