--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -10,7 +10,7 @@ app-template:
     tag: master@sha256:9ec88ac73269855f3a0e0b80ed6ee4980decd81fb12901ff39cd9d8d2cf9b6fc
   args: ["--config", "/etc/authelia/config.yaml"]
   service:
-.    main:
+    main:
       ports:
         http:
           port: &port 80
