--- a/authentication/authelia/templates/configmap.yaml
+++ b/authentication/authelia/templates/configmap.yaml
@@ -32,6 +32,7 @@ data:
         - name: internal
           networks: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
     session:
+      domain: toolstowelsandfroods.com
       redis:
         host: redis.redis.svc.cluster.local
         port: 6379
