--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -35,4 +35,8 @@ spec:
       remoteRef:
         key: /authelia/
         property: username
+    - secretKey: AUTHELIA_NOTIFIER_SMTP_SENDER
+      remoteRef:
+        key: /authelia/
+        property: smtp_sender
 
