--- a/apps/homebox/values.yaml
+++ b/apps/homebox/values.yaml
@@ -29,6 +29,12 @@ app-template:
         hajimari.io/icon: box
         hajimari.io/appName: Homebox
         hajimari.io/info: Inventory and organization
+        nginx.ingress.kubernetes.io/auth-method: GET
+        nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
+        nginx.ingress.kubernetes.io/auth-signin: https://auth.toolstowelsandfroods.com?rm=$request_method
+        nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
+        nginx.ingress.kubernetes.io/auth-snippet: |
+          proxy_set_header X-Forwarded-Method $request_method;
       ingressClassName: nginx
       hosts:
         - host: &host org.toolstowelsandfroods.com
