--- a/apps/homebox/values.yaml
+++ b/apps/homebox/values.yaml
@@ -33,8 +33,8 @@ app-template:
         nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
         nginx.ingress.kubernetes.io/auth-signin: https://auth.toolstowelsandfroods.com?rm=$request_method
         nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
-        nginx.ingress.kubernetes.io/auth-snippet: |
-          proxy_set_header X-Forwarded-Method $request_method;
+        nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
+        nginx.ingress.kubernetes.io/proxy-body-size: "0"
       ingressClassName: nginx
       hosts:
         - host: &host org.toolstowelsandfroods.com
