--- a/authentication/authelia/templates/configmap.yaml
+++ b/authentication/authelia/templates/configmap.yaml
@@ -7,6 +7,7 @@ data:
     storage:
       local:
         path: /config/db.sqlite3
+    default_redirection_url: auth.toolstowelsandfroods.com
     log:
       level: trace
     default_2fa_method: totp
