--- a/apps/immich-fork/Chart.yaml
+++ b/apps/immich-fork/Chart.yaml
@@ -3,5 +3,5 @@ name: immich
 version: 0.0.0
 dependencies:
   - name: immich
-    version: 0.1.1
-    repository: https://immich-app.github.io/immich-charts
+    version: 0.2.0
+    repository: https://jsakkos.github.io/immich-charts
