--- a/apps/immich-fork/Chart.yaml
+++ b/apps/immich-fork/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: immich
     version: 0.2.0
-    repository: https://jsakkos.github.io/immich-charts
+    repository: https://immich-app.github.io/immich-charts
