--- a/authentication/authelia/templates/configmap.yaml
+++ b/authentication/authelia/templates/configmap.yaml
@@ -32,6 +32,21 @@ data:
       networks:
         - name: internal
           networks: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
+
+    identity_providers:
+      oidc:
+        cors:
+          endpoints: ["authorization", "token", "revocation", "introspection"]
+          allowed_origins_from_client_redirect_uris: true
+        clients:
+          - id: immich
+            description: Immich
+            public: false
+            authorization_policy: one_factor
+            pre_configured_consent_duration: 1y
+            scopes: ["openid", "profile", "email"]
+            redirect_uris: ["https://photos.toolstowelsandfroods.com/auth/login", "app.immich:/"]
+            userinfo_signing_algorithm: none
     session:
       domain: toolstowelsandfroods.com
       redis:
