--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -39,4 +39,10 @@ spec:
       remoteRef:
         key: /authelia/
         property: smtp_sender
+    - secretKey: IMMICH_OAUTH_CLIENT_SECRET
+      remoteRef:
+        key: /authelia/
+        property: IMMICH_OAUTH_CLIENT_SECRET
+
+    
 
