--- a/apps/fasten/values.yaml
+++ b/apps/fasten/values.yaml
@@ -5,8 +5,10 @@ app-template:
     type: statefulset
     replicas: 1
   image:
-    repository: ghcr.io/fastenhealth/fasten-onprem:sandbox
+    repository: ghcr.io/fastenhealth/fasten-onprem
     tag: 0.0.12
+  env:
+    FASTEN_ENV: sandbox
   service:
     main:
       enabled: true
