change tag to sandbox

--- a/apps/fasten/values.yaml
+++ b/apps/fasten/values.yaml
@@ -6,7 +6,7 @@ app-template:
     replicas: 1
   image:
     repository: ghcr.io/fastenhealth/fasten-onprem
-    tag: 0.0.12
+    tag: sandbox
   env:
     FASTEN_ENV: sandbox
   service:
