--- a/apps/recipes/sts-postgresql.yaml
+++ b/apps/recipes/sts-postgresql.yaml
@@ -35,18 +35,11 @@ spec:
           value: /bitnami/postgresql/data
         - name: POSTGRES_USER
           value: recipes
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: recipes
-              key: postgresql-password
-        - name: POSTGRESQL_POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: recipes
-              key: postgresql-postgres-password
         - name: POSTGRES_DB
           value: recipes
+        envFrom:
+          - secretRef:
+              name: recipes-secrets
         image: docker.io/bitnami/postgresql:11.5.0-debian-9-r60
         imagePullPolicy: IfNotPresent
         livenessProbe:
