--- a/apps/recipes/pvc.yaml
+++ b/apps/recipes/pvc.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app: recipes
 spec:
-  accessModes: ReadWriteOnce
+  accessModes:
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
@@ -17,7 +18,8 @@ metadata:
   labels:
     app: recipes
 spec:
-  accessModes: ReadWriteOnce
+  accessModes:
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
