--- a/apps/recipes/secrets.yaml
+++ b/apps/recipes/secrets.yaml
@@ -22,4 +22,12 @@ spec:
       remoteRef:
         key: /recipes/
         property: postgres-user-password
+     - secretKey: postgresql-password
+      remoteRef:
+        key: /recipes/
+        property: postgresql-password
+    - secretKey: postgresql-postgres-password
+      remoteRef:
+        key: /recipes/
+        property: postgresql-postgres-password      
 
